# Tradeops-Log-Monitor

./: .gitignore  README.md  dashboard.py  pyproject.toml
tests/: test_anomalies.py  test_cli.py  test_lifecycle.py  test_metrics.py  test_parser.py  test_reporting.py  test_services.py  test_storage.py
tradeops_monitor/: __init__.py  __main__.py  anomalies.py  cli.py  dashboard.py  lifecycle.py  metrics.py  models.py  output.py  parser.py  reporting.py  services.py  storage.py
