[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeops-log-monitor"
version = "0.1.0"
description = "Local Python CLI for parsing simulated order-event logs and flagging trading workflow issues."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "TradeOps Log Monitor Maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
tradeops-monitor = "tradeops_monitor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

